# verisign

backend/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
backend/migrations/: 0001_credentials.down.sql  0001_credentials.up.sql
backend/src/: lib.rs  main.rs  types.rs  utils.rs
backend/src/auth/: handler.rs  mod.rs  model.rs  route.rs  types.rs
frontend/: .eslintrc.json  .prettierrc  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/: AppWrapper.tsx  Navbar.tsx  Sidebar.tsx
frontend/components/providers/: ChakraUiProvider.tsx  TanStackProvider.tsx
frontend/features/backend/: useFetchPing.ts  useLoginUser.ts  useLogoutUser.ts
frontend/features/json_place/: useFetchJsonPlace.ts
frontend/lib/: axios.ts
frontend/types/: backend.ts  json_place.ts
