[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
argon2 = "0.5.2"
chrono = "0.4.31"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1.35.0", features = ["full"] }
